[gd_scene load_steps=6 format=3 uid="uid://b51r3b8ybihqy"]

[ext_resource type="Script" path="res://BIG EYE/Attacks/orbital_laser.gd" id="1_s4j1g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gvyt1"]
cull_mode = 2
shading_mode = 0
albedo_color = Color(1, 0.0901961, 0.0901961, 1)
grow_amount = 1.011
proximity_fade_distance = 1.17

[sub_resource type="CylinderMesh" id="CylinderMesh_u6hlk"]
resource_local_to_scene = true
lightmap_size_hint = Vector2i(159, 204)
material = SubResource("StandardMaterial3D_gvyt1")
top_radius = 5.0
bottom_radius = 5.0
height = 30.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_cg10a"]
resource_local_to_scene = true
height = 10.1131
radius = 4.67069

[sub_resource type="CylinderShape3D" id="CylinderShape3D_n17xt"]
resource_local_to_scene = true
height = 10.1131
radius = 3.0

[node name="Orbital Laser" type="Node3D"]
script = ExtResource("1_s4j1g")

[node name="Damage Area" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="Damage Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 17.3743, 0)
cast_shadow = 0
ignore_occlusion_culling = true
mesh = SubResource("CylinderMesh_u6hlk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Damage Area/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -29.3825, 0)
cast_shadow = 0
ignore_occlusion_culling = true
mesh = SubResource("CylinderMesh_u6hlk")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("CylinderShape3D_cg10a")

[node name="SpotLight3D2" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 7.65002, 0)
light_color = Color(1, 0, 0, 1)
light_energy = 16.0
spot_range = 17.8852
spot_attenuation = 0.0253829
spot_angle = 43.876
spot_angle_attenuation = 0.129408

[node name="duration" type="Timer" parent="."]
one_shot = true

[node name="speed timer" type="Timer" parent="."]
one_shot = true

[node name="Spread Area" type="Area3D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape3D" type="CollisionShape3D" parent="Spread Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("CylinderShape3D_n17xt")

[connection signal="area_entered" from="Damage Area" to="." method="_on_damage_area_area_entered"]
[connection signal="timeout" from="duration" to="." method="_on_duration_timeout"]
[connection signal="timeout" from="speed timer" to="." method="_on_speed_timer_timeout"]
[connection signal="area_entered" from="Spread Area" to="." method="_on_spread_area_area_entered"]
